# airbyte-source-excel

./: Dockerfile  IMPROVEMENTS.md  README.md  acceptance-test-config.yml  configured_catalog.json  connector_registry_entry.json  main.py  metadata.yaml  pyproject.toml
integration_tests/: invalid_config.json
source_excel_sheets/: __init__.py  client.py  source.py  spec.py  streams.py  utils.py
